k8s/prod-tokyo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newsugar-frontend-service-prod
  namespace: default
  labels:
    app: newsugar-frontend
    env: prod
spec:
  type: ClusterIP
  selector:
    app: newsugar-frontend
    env: prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
